[project]
name = "comfyui_framemaker"
description = "This node creates a sequence of frames by moving and scaling a subject image over a background image."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/diStyApps/ComfyUI_FrameMaker"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_FrameMaker"
Icon = ""
